test/langtools/tools/javac/unnamedclass/SourceLevelErrorPosition.java
/**
 * @test /nodynamiccopyright/
 * @compile/fail/ref=SourceLevelErrorPosition.out -XDrawDiagnostics SourceLevelErrorPosition.java
 */
class Nested {}
void main() {
    System.err.println("");
}
